--- a/bio.html
+++ b/bio.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
 	<title>Dan Ross Comp20 Portfolio Bio</title>
@@ -19,7 +19,7 @@
 	<p>I have always had passions for design, conceptualization, and construction, so learning to code was a natural next step. I began teaching myself basic web development through online tutorials and local classes. While I got off to a great start I began to see the value of having a formal computer science education so I enrolled in Tufts University's Computer Science Post-Bac Program. I hope to leave Tufts as a stronger contributer to the fields of IT and Technology, and look forward to applying my skills in the workforce.</p>
 	</div>
 		</div>
-		<p id="footertext"><span>Created by Dan Ross in Cambridge, MA. Updated September 2017.</span></p>
+		<p id="footertext"><span>Created by Dan Ross in Cambridge, MA. Updated April 2018.</span></p>
 		</div>
 </body>
 
